--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,10 @@ body {
   
   padding-bottom: 5px;
   z-index: 999;
+  padding: 7px 0 7px 0;
 }
 .header__active {
-  background: #615f5f;
+  background: #444444;
 }
 
 .header__wrapper {
@@ -104,16 +105,16 @@ body {
       -ms-flex-pack: end;
           justify-content: flex-end;
           /* padding: 0 15px 0 0; */
-  /* -ms-flex-wrap: wrap;
-        flex-wrap: wrap; */
-        padding-top: 15px;
+  /* margin-top: 3px; */
+       
+        /* padding-top: 15px; */
 }
 
 .header__nav-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* margin-top: 12px; */
+  
 }
 .header__item {
   margin-right: 30px;
@@ -128,13 +129,14 @@ body {
   color: #fff;
   text-transform: uppercase;
   text-decoration: none;
-  padding-bottom: 10px;
-  border-bottom: 3px solid transparent;
+  
+  border-bottom: 2px solid #532dff;
+  /* border-bottom: 2px solid transparent; */
 }
 
 .header__link-active {
-  padding-bottom: 9px;
-  border-bottom: 3px solid #ffc32d;
+  
+    border-bottom: 2px solid #ffc32d;
 }
 .header__link:hover,
 .header__link:focus,
@@ -317,14 +319,13 @@ display: block;
   line-height: 17px;
   text-transform: uppercase;
   color: #000000;
-  
+  transition: all 0.2s ease-in-out;
 }
 .about__btn:hover {
   background: #000;
   color: #ffc32d;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  
+  transition: all 0.2s ease-in-out;
 }
 .about__inner-img img {
   /* width: 40%; */
@@ -680,17 +681,17 @@ input.phone::placeholder {
   padding: 17px 30px;
   border: none;
   background: #fff;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .submit:hover {
   background: #000;
   color: #ffc32d;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .contact__policy{
@@ -1002,7 +1003,8 @@ a.our-contacts__item-text:hover span {
 
 /* footer */
 .footer {
-  background: #615f5f;
+  background: #444444;
+  
 }
 .footer__inner {
   display: -webkit-box;
@@ -1014,11 +1016,11 @@ a.our-contacts__item-text:hover span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 35px 0px 35px 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 
-.footer__text {
+/* .footer__text {
   
   color: #fff;
   font-weight: 500;
@@ -1026,8 +1028,8 @@ a.our-contacts__item-text:hover span {
   line-height: 22px;
   text-align: center;
   border-bottom: 1px solid #FFC32D;
-  /* border-bottom: 1px solid rgb(96%, 96%, 96%, 0.2); */
-  padding-bottom: 5px;
+  
+  padding-bottom: 0px;
   cursor: pointer;
   padding-top: 15px;
   transition: all 0.3s;
@@ -1035,7 +1037,7 @@ a.our-contacts__item-text:hover span {
 .footer__text:hover{
   color: #FFC32D;
   transition: all 0.3s;
-}
+} */
 .footer__link {
   width: 33.33333%;
   display: -webkit-box;
@@ -1101,23 +1103,19 @@ a.footer__social:last-child{
   font-style: normal;
   text-transform: uppercase;
   color: #000000;
-
   width: 150px;
   margin: 0 auto;
   text-align: center;
   font-size: 18px;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  
+  transition: all 0.2s ease-in-out;
 }
 
 .close:hover,
 .close:focus {
   background: #000;
   color: #ffc32d;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
   text-decoration: none;
   cursor: pointer;
 } 
@@ -2043,6 +2041,19 @@ padding-bottom: 80px;
     /* width: 80%; */
     
   }
+  .submit__title{
+    font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 34px;
+  text-transform: uppercase;
+  color: #000000;
+  text-align: center;
+    margin: 0 auto;
+    padding: 80px 10px 30px 10px;
+    
+  }
 }
 
 @media (max-width: 800px) {
@@ -2380,6 +2391,11 @@ margin-left: 0px;
     text-align: left;
   }
 }
+
+
+
+
+
 @media (max-width: 620px){
   .work__item-circle {
     min-width: 100px;
@@ -2491,6 +2507,7 @@ margin: 0 auto 0 0;
           transform: translateY(-50%);
   
  } */
+ 
 }
 @media (max-width: 508px) {
   .img-big {
@@ -2506,7 +2523,13 @@ margin: 0 auto 0 0;
   .textarea{
     font-size: 12px;
   }
+  .submit__title{
+   
+  font-size: 25px;
+  line-height: 34px;
   
+    
+  }
 }
 
 @media (max-width: 482px) {
@@ -2611,17 +2634,17 @@ margin: 0 auto 0 0;
     padding: 17px 30px;
     border: none;
     background: #fff;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
 
   .submit:hover {
     background: #000;
     color: #ffc32d;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
   .our-contacts__item-circle {
     width: 80px;
@@ -2733,6 +2756,12 @@ margin: 0 auto 0 0;
     font-size: 23px;
     padding-top: 80px;
     margin-bottom: 65px;
+  }
+  .submit__title{
+    font-size: 23px;
+    line-height: 24px;
+    padding: 80px 10px 30px 10px;
+    
   }
   .project__title {
     margin: 0 auto;
