--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ body {
 
 
 
+
+
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
@@ -130,7 +132,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   
-  border-bottom: 2px solid #532dff;
+  /* border-bottom: 2px solid #532dff; */
   /* border-bottom: 2px solid transparent; */
 }
 
@@ -1016,7 +1018,7 @@ a.our-contacts__item-text:hover span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0px 0px 0px 0px;
+          padding: 7px 0 7px 0;
 }
 
 
@@ -1054,6 +1056,10 @@ a.footer__social {
 }
 a.footer__social:last-child{
   margin-right: 0px;
+}
+.footer__social img{
+  width: 32px;
+  height: 32px;
 }
 .footer__logo{
   width: 33.33333%;
@@ -1879,7 +1885,10 @@ padding-bottom: 80px;
   .policy__window-title{
     font-size: 20px;
   }
- 
+  .footer__social img{
+    width: 30px;
+    height: 30px;
+  }
 
 }
 
@@ -2376,7 +2385,7 @@ margin-left: 0px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 35px 0px 35px 0px;
+            padding: 7px 0 7px 0;
   }
   /* .footer__logo{
     width: 20%;
@@ -2481,11 +2490,9 @@ margin-left: 0px;
   
   .footer__inner {
        
-       display: flex;
-
-                    justify-content: canter;
-    
-    padding: 35px 0px 35px 0px;
+    display: flex;
+    justify-content: canter;
+    padding: 7px 0 7px 0;
     position: relative;
   }
 
@@ -2778,6 +2785,10 @@ margin: 0 auto 0 0;
     max-height: 195px;
     width: auto;
     
+  }
+  .footer__social img{
+    width: 28px;
+    height: 28px;
   }
 }
 
