--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,8 @@ display: block;
   background-size: cover;
   margin: 0 auto;
   text-align: center;
-  padding-top: 285px;
+  padding-top: 250px;
+  /* padding-top: 285px; */
 }
 
 .intro__title {
@@ -1561,6 +1562,16 @@ padding-bottom: 80px;
       font-size: 12px;
     }
 }
+
+@media (max-width: 958px){
+  .intro {
+    padding-top: 200px;
+    
+  }
+}
+
+
+
 @media (max-width: 930px) {
   .about__inner {
     display: -webkit-box;
@@ -2406,6 +2417,12 @@ margin-left: 0px;
   }
 }
 @media (max-width: 600px) {
+  
+    .intro {
+      padding-top: 220px;
+      
+    }
+  
   .intro__title {
     font-size: 40px;
   }
@@ -2522,6 +2539,12 @@ margin: 0 auto 0 0;
 }
 
 @media (max-width: 482px) {
+  
+    .intro {
+      padding-top: 230px;
+      
+    }
+  
   .intro__title {
     font-size: 36px;
   }
@@ -2865,6 +2888,7 @@ margin: 0 auto 0 0;
   }
 
   }
+  
 
   @media (max-width: 390px){
     .about__btn {
