--- a/css/style.css
+++ b/css/style.css
@@ -1785,7 +1785,7 @@ padding-bottom: 80px;
   .our-contacts__item {
     width: 25%;
     text-align: center;
-    margin-right: 30px;
+    margin-right: 10px;
     position: relative;
   }
   .our-contacts__item-block{
@@ -2027,7 +2027,7 @@ padding-bottom: 80px;
   .our-contacts__item {
     width: 25%;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 7px;
     position: relative;
   }
   
@@ -2044,22 +2044,14 @@ padding-bottom: 80px;
     width: auto;
     
   }
-  @media (max-width: 824px){
-    .our-contacts__item {
-      width: 25%;
-      text-align: center;
-      margin-right: 17px;
-      position: relative;
-    }
-    
-  }
+  
 }
 
 @media (max-width: 785px){
   .our-contacts__item {
-    width: 25%;
+    width: 35%;
     text-align: center;
-    margin-right: 10px;
+    margin-right: 5px;
     position: relative;
   }
   .our-contacts__item-title {
@@ -2067,6 +2059,63 @@ padding-bottom: 80px;
     margin-bottom: 15px;
   }
 }
+@media (max-width: 775px){
+  .our-contacts__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-flex: 1, 1;
+        -ms-flex-positive: 1, 1;
+            flex-grow: 1, 1;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-bottom: 30px;
+  }
+  .our-contacts__item {
+    width: 45%;
+    text-align: center;
+    /* margin-left: 10px; */
+    margin-right: 5px;
+    
+    position: relative;
+    margin-bottom: 30px;
+  }
+  .our-contacts__item:last-child {
+    margin-right: 5px;
+  }
+  .our-contacts__item-circle {
+    width: 140px;
+    height: 140px;
+    border-radius: 100%;
+    background: #f6f6f6;
+    margin: 0 auto;
+    margin-bottom: 33px;
+  }
+  
+  .our-contacts__item-title {
+    margin-bottom: 10px;
+  }
+
+  .our-contacts__item-text span{
+    border-bottom: 1px solid #ffc32d;
+    transition: all 0.3s;
+  }
+  a.our-contacts__item-text:hover span {
+    color: #ffc32d;
+    transition: all 0.3s;
+  }
+  .span-text span{
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+  }
+}
+
 @media (max-width: 773px){
   .form {
   text-align: center;
@@ -2083,13 +2132,13 @@ padding-bottom: 80px;
   }
 
 }
-@media (max-width: 764px){
+/* @media (max-width: 764px){
   .our-contacts__item {
-    width: 25%;
+    width: 30%;
     text-align: center;
     margin-right: 5px;
     position: relative;
-  }
+  } */
 
 @media (max-width: 750px) {
   .about__inner-img img {
@@ -2167,7 +2216,7 @@ padding-bottom: 80px;
   .our-contacts__item {
     width: 45%;
     text-align: center;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     margin-right: 5px;
     
     position: relative;
@@ -2734,16 +2783,17 @@ margin: 0 auto 0 0;
   }
 
   .advantages__item-title {
+    margin: 0 auto;
     margin-bottom: 12px;
     text-align: center;
   }
 
   .advantages__item-circle {
-    margin-right: 10px;
+    margin-right: 0px;
     margin-bottom: 20px;
   }
   .advantages__img {
-    left: 50%;
+    left: 51.5%;
     top: 25px;
     -webkit-transform: translateX(-59%);
         -ms-transform: translateX(-59%);
@@ -2841,14 +2891,15 @@ margin: 0 auto 0 0;
     margin-bottom: 10px;
   }
   .our-contacts__item {
-   width: 45%;
+   width: 48%;
+   margin-right: 5px;
     margin-bottom: 60px;
   }
   .our-contacts__item-title {
     margin-bottom: 10px;
   }
   .our-contacts__item-text{
-    width: 90%;
+    width: 100%;
   }
   .our-contacts__item-circle {
     
@@ -2872,6 +2923,7 @@ margin: 0 auto 0 0;
 @media (max-width: 414px){
   .title{
     font-size: 20px;
+    
     line-height: 30px;
   }
   .title-small{
@@ -3020,9 +3072,7 @@ margin-bottom: 20px;
     margin-bottom: 50px;
   }
   
- 
-  
-  .our-contacts__inner {
+   .our-contacts__inner {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -3040,7 +3090,7 @@ margin-bottom: 20px;
     margin-bottom: 10px;
   }
   .our-contacts__item {
-    width: 45%;
+    width: 48%;
    
    /* width: 140px; */
     margin-bottom: 60px;
@@ -3051,43 +3101,33 @@ margin-bottom: 20px;
   
 }
 
-
-@media (max-width: 350px) {
-  
-  .our-contacts__inner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-flex: 1, 1;
-        -ms-flex-positive: 1, 1;
-            flex-grow: 1, 1;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-around;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-            -ms-flex-wrap: wrap;
-                flex-wrap: wrap;
-    margin-bottom: 5px;
-  }
+@media (max-width: 364px){
   .our-contacts__item {
-   width: 49%;
-   margin: 0;
+    width: 48%;
+   
+   /* width: 140px; */
     margin-bottom: 60px;
   }
   .our-contacts__item:last-child {
-    margin-right: 0px;
+    margin-right: 5px;
   }
-  .our-contacts__item-circle {
-    
-    margin-bottom: 15px;
+  .text{
+    font-size: 13px;
+    line-height: 20px;
+  }
+}
+
+@media (max-width: 340px) {
+  .title{
+    font-size: 18px;
+  }
+  .title-small{
+    font-size: 14px;
   }
   
-  .our-contacts__item-title {
-    margin-bottom: 10px;
+  .text{
+    font-size: 12px;
   }
-  
 }
 
 @media (max-width: 330px){
@@ -3096,6 +3136,9 @@ margin-bottom: 20px;
     padding: 20px 15px;
     margin: 0 20px;
     
+  }
+  .our-contacts__item-text{
+    font-size: 12px;
   }
   }
 
@@ -3121,11 +3164,11 @@ margin-bottom: 20px;
    
     }
   
-    @media (max-width: 321px){
+    /* @media (max-width: 321px){
       .our-contacts__item-text{
-        font-size: 13px;
+        font-size: 12px;
       }
-    }
+    } */
 
 
     
