--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,7 @@ outline: none!important;
 }
 .intro__button:hover{
   background-color: #000;
-  border: 1px solid transparent;
+  box-shadow: 5px 5px 7px #535353;
   color: #fff;
   transition: all .3s ease-in-out;
 }
